name:                database-service-api
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/sagarsachdeva/database-service-api#readme
license:             BSD3
license-file:        LICENSE
author:              Sagar Sachdeva
maintainer:          sachdevs@tcd.ie
copyright:           2016
category:            test
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     UseHaskellAPI
                     , UseHaskellAPIClient
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , servant-client
                     , servant-server
                     , bson-generic
                     , aeson
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sagarsachdeva/database-service-api
